--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack":"webpack",
+    "webpack": "webpack",
     "dev": "npm run webpack -- --mode development --watch./frontend/src/index.js --output ./frontend/static/frontend/main.js",
     "build": "npm run webpack -- --mode production ./frontend/src/index.js --output ./frontend/static/frontend/main.js"
   },
@@ -29,8 +29,13 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   }
 }
