--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "axios": "^0.19.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-alert": "^6.0.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
